--- a/app/src/main/res/layout/profile_rv_row.xml
+++ b/app/src/main/res/layout/profile_rv_row.xml
@@ -56,7 +56,7 @@
         app:layout_constraintTop_toTopOf="@+id/person_age" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/arrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -95,7 +95,7 @@
         android:layout_marginBottom="8dp"
         android:text="Capilla Padre Damian"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintEnd_toStartOf="@+id/arrow"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textView5" />
 
@@ -122,7 +122,7 @@
         android:singleLine="false"
         android:text="Coding 24/7"
         app:layout_constraintBottom_toTopOf="@+id/barrier2"
-        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintEnd_toStartOf="@+id/arrow"
         app:layout_constraintStart_toEndOf="@+id/barrier"
         app:layout_constraintTop_toTopOf="parent" />
 
