--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,14 +15,13 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
             android:padding="8dp"
             tools:context=".Login">
 
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="wrap_content"
-                android:layout_height="90dp"
+                android:layout_height="175dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="8dp"
@@ -39,7 +38,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:text="@string/username"
-                android:textColor="@color/icons"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@+id/username"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -56,8 +54,6 @@
                 android:ems="10"
                 android:hint="@string/your_username"
                 android:inputType="text"
-                android:textColor="@color/icons"
-                android:textColorHint="@color/icons"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/username_tv" />
@@ -68,7 +64,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/email"
-                android:textColor="@color/icons"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@+id/email"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -85,8 +80,6 @@
                 android:ems="10"
                 android:hint="@string/email"
                 android:inputType="textEmailAddress"
-                android:textColor="@color/icons"
-                android:textColorHint="@color/icons"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -98,7 +91,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/password"
-                android:textColor="@color/icons"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@+id/password"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -115,8 +107,6 @@
                 android:ems="10"
                 android:hint="@string/your_password"
                 android:inputType="textPassword"
-                android:textColor="@color/icons"
-                android:textColorHint="@color/icons"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -128,7 +118,6 @@
                 android:layout_height="20dp"
                 android:layout_marginTop="16dp"
                 android:text="@string/password_confirmation"
-                android:textColor="@color/icons"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@+id/password_confirmation"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -145,8 +134,6 @@
                 android:ems="10"
                 android:hint="@string/confirm_password"
                 android:inputType="textPassword"
-                android:textColor="@color/icons"
-                android:textColorHint="@color/icons"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -157,19 +144,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="32dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="32dp"
                 android:background="@color/accent"
                 android:text="@string/register"
                 android:textAllCaps="false"
                 android:textColor="@color/icons"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/password_confirmation"
-                app:layout_constraintVertical_bias="0.165" />
+                app:layout_constraintTop_toBottomOf="@+id/password_confirmation" />
 
 
         </android.support.constraint.ConstraintLayout>
