--- a/app/src/main/res/layout/activity_personal_chat.xml
+++ b/app/src/main/res/layout/activity_personal_chat.xml
@@ -81,6 +81,7 @@
         app:layout_constraintTop_toBottomOf="@+id/recyclerView">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/introducion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/message" />
@@ -90,9 +91,11 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:text="@string/SendButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textInputLayout"
         app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
 
 </android.support.constraint.ConstraintLayout>
