--- a/app/src/main/res/layout/custom_action_bar_layout.xml
+++ b/app/src/main/res/layout/custom_action_bar_layout.xml
@@ -12,13 +12,14 @@
         android:layout_height="0dp"
         android:layout_alignParentTop="false"
         android:layout_centerHorizontal="false"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
         android:adjustViewBounds="true"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:clickable="true"
         android:cropToPadding="true"
+        android:paddingStart="8dp"
+        android:paddingTop="4dp"
+        android:paddingEnd="8dp"
+        android:paddingBottom="4dp"
         android:src="@drawable/gear"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/logo"
@@ -49,12 +50,13 @@
         android:layout_height="0dp"
         android:layout_alignParentTop="false"
         android:layout_centerHorizontal="false"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="4dp"
         android:adjustViewBounds="true"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:clickable="true"
+        android:paddingStart="8dp"
+        android:paddingTop="4dp"
+        android:paddingEnd="8dp"
+        android:paddingBottom="4dp"
         android:src="@drawable/chat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
