--- a/app/src/main/res/layout/chat_message.xml
+++ b/app/src/main/res/layout/chat_message.xml
@@ -8,15 +8,16 @@
 
     <TextView
         android:id="@+id/chat"
-        android:layout_width="86dp"
+        android:layout_width="172dp"
         android:layout_height="36dp"
-        android:layout_marginStart="264dp"
+        android:layout_marginStart="192dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="8dp"
         android:background="#45F5A5"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
