--- a/app/src/main/res/layout/card_column.xml
+++ b/app/src/main/res/layout/card_column.xml
@@ -22,6 +22,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:maxHeight="512dp"
             android:minHeight="250dp"
             app:srcCompat="@drawable/iscle"
             card_view:layout_constraintEnd_toEndOf="parent"
