--- a/app/src/main/res/layout/chat_message.xml
+++ b/app/src/main/res/layout/chat_message.xml
@@ -8,8 +8,8 @@
 
     <TextView
         android:id="@+id/chat"
-        android:layout_width="172dp"
-        android:layout_height="36dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="8dp"
