--- a/app/src/main/res/layout/chat_message_friend.xml
+++ b/app/src/main/res/layout/chat_message_friend.xml
@@ -8,8 +8,8 @@
 
     <TextView
         android:id="@+id/chat"
-        android:layout_width="189dp"
-        android:layout_height="47dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
